# DeckMenuHotkey

./: .gitignore  .gitmodules  main.py  package-lock.json  plugin.json
backend/: CMakeLists.txt  Makefile
backend/src/: Controller.cc  Controller.h  Controller_Custom.cc  Controller_Custom.h  Controller_Steam.cc  Controller_Steam.h  Controller_XBox.cc  Controller_XBox.h  DeviceDataReader.cc  DeviceDataReader.h  Homepage.h  InputDevice.cc  InputDevice.h  Interface.cc  Interface.h  Keyboards.cc  Keyboards.h  Manager.cc  Manager.h  Parent.cc  Parent.h  Preferences.cc  Preferences.h  StringHelper.cc  StringHelper.h  Types.h  WebInterface.cc  WebInterface.h  main.cc
src/: backend.ts  index.tsx  keys.ts  types.d.ts
